fixing height overflow on table and added moment time to select options

--- a/src/apps/release/src/app/views/ViewRelease/components/PlanTable/PlanTable.less
+++ b/src/apps/release/src/app/views/ViewRelease/components/PlanTable/PlanTable.less
@@ -10,7 +10,7 @@
 
     // Structure
     height: 100%;
-    overflow: hidden;
+
     display: block;
   }
 
